Thu Mar 12 18:09:25 1998  Tom Yu  <tlyu@mit.edu>

	* update_utmp.c (pty_update_utmp): Fix bogus entry of
	PTY_LOGIN_PROCESS types on BSD-ish systems. [pty/531]

Wed Feb 18 16:33:58 1998  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Remove trailing slash from thisconfigdir.  Fix up
	BUILDTOP for new conventions.

Mon Feb  2 16:18:08 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Define BUILDTOP and thisconfigdir in the Makefile

	* configure.in, Makefile.in: Remove CopySrcHeader and CopyHeader 
		from configure.in and move equivalent functionality to
		Makefile.in 

Sun Dec  7 00:05:28 1997  Tom Yu  <tlyu@mit.edu>

	* getpty.c (pty_getpty): Fix goof in previous, which introduced
	another fencepost error.

Thu Dec  4 21:48:12 1997  Tom Yu  <tlyu@mit.edu>

	* getpty.c (pty_getpty): Fix checks on string lengths to account
	for terminating nul character.  Some whitespace fixups.

Wed Dec  3 17:16:44 1997  Tom Yu  <tlyu@mit.edu>

	* pty_err.et: Add PTY_OPEN_SLAVE_TOOSHORT error code.

	* open_slave.c (pty_open_slave): Check to ensure that the slave
	name is not NULL or zero-length.

Tue Oct 28 13:28:54 1997  Ezra Peisach  <epeisach@.mit.edu>

	* pty-int.h: Do not prototype initialize_pty_error_table as
	        pty-err.h does as well.

Fri Oct 24 09:12:43 1997  Ezra Peisach  <epeisach@mit.edu>

	* Makefile.in (CFILES): Add $(srcdir).

Wed Oct  1 04:53:30 1997  Tom Yu  <tlyu@mit.edu>

	* configure.in: Default to a long rather than an int for a time_t
	for paranoia reasons.

Tue Jun  3 23:05:07 1997  Theodore Y. Ts'o  <tytso@mit.edu>

	* getpty.c (pty_getpty): Remove erroneous space from the HPUX open().

Fri Apr 25 19:14:48 1997  Theodore Y. Ts'o  <tytso@mit.edu>

	* configure.in: Check for openpty() in -lutil.  It's there on
		FreeBSD and BSDI systems.

Fri Feb 21 18:25:47 1997  Sam Hartman  <hartmans@tertius.mit.edu>

	* pty-int.h: No longer prototype error table init function.

Thu Jan 16 18:47:12 1997  Tom Yu  <tlyu@mit.edu>
